Add Git LFS APK support with API 30 emulator workflow
- .gitignore: allow app/*.apk for Git LFS tracked files
- DriverManager: resolve APK from APP_PATH env > local app/ dir > Firebase fallback
  (Firebase config preserved untouched for future use)
- accessibility-test.yml: full rewrite — LFS checkout, API 30 emulator,
  Appium server, AccessibilityTest single-method Maven run, artifact uploads

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>